syntax = "proto2";

package NAlice;

option go_package = "a.yandex-team.ru/alice/megamind/protos/guest";
option java_package = "ru.yandex.alice.megamind.protos.guest";
option java_outer_classname = "GuestData";

import "alice/megamind/protos/blackbox/blackbox.proto";

import "mapreduce/yt/interface/protos/extension.proto";

message TGuestData {
    option (NYT.default_field_flags) = SERIALIZATION_YT;
    optional TBlackBoxUserInfo UserInfo = 1 [json_name = "user_info", (NYT.column_name) = "user_info"];
    optional string RawPersonalData = 2 [json_name = "raw_personal_data", (NYT.column_name) = "raw_personal_data"];
}
